@@ -1,4 +1,4 @@
 NO_TAGS = False
-VERSION = '5.0.0'
+VERSION = '5.0.1'
 LOGFILE = '/dev/null'
 SILENT = False  
