@@ -1,3 +1,10 @@
+ftransc 5.0.2 (15 Jul 2012):
+	+ added rhythmbox plugin
+	+ added CD ripping via cdparanoia
+
+ftransc 5.0.1 (15 Jul 2012):
+	+ added multithreading.
+
 ftransc 4.3.3 (25 Mar 2012):
 	+ fixed fatal KeyError when converting .aac and .mp4 files
 
